<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/reg_fragment"
    android:weightSum="1"
    android:gravity="center_horizontal">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_layout_name"
        android:padding="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:drawableRight="@drawable/ic_action_person_light"
            android:inputType="textPersonName"
            android:id="@+id/input_name" />
    </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_layout_dob"
            android:layout_marginLeft="16dp"
            android:layout_weight="0.06"
            android:layout_marginRight="16dp"
            android:padding="8dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dob"
                android:focusable="false"
                android:inputType="datetime"
                android:id="@+id/input_dob"
                android:drawableRight="@drawable/ic_action_today"
                android:singleLine="true"
                android:editable="false"
                android:clickable="false" />
        </android.support.design.widget.TextInputLayout>
        <!--<ImageButton-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:src="@drawable/ic_action_today"-->
            <!--android:id="@+id/btnDate"-->
            <!--android:background="@android:color/transparent"-->
            <!--android:layout_marginRight="15dp" />-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="8dp"
        android:id="@+id/input_layout_address">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:drawableRight="@drawable/ic_action_markunread_mailbox"
            android:inputType="textPostalAddress"
            android:id="@+id/input_address" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="8dp"
        android:id="@+id/input_layout_contact">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact"
            android:inputType="number"
            android:id="@+id/input_contact"
            android:drawableRight="@drawable/ic_action_contact_phone"
            android:singleLine="true"
            android:maxLength="10" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="8dp"
        android:id="@+id/input_layout_email">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_action_contact_mail"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:id="@+id/input_email"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:text="@string/register"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnRegister"
        android:padding="5dp"
        android:layout_marginTop="16dp"
        tools:ignore="RtlHardcoded"
        android:background="@drawable/round_button"
        android:textColor="@android:color/white" />

</LinearLayout>