<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.example.amilah.test.activity.LoginActivity">

    <TextView
        android:text="Easy Teacher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:id="@+id/textView2"
        android:textSize="@dimen/txt"
        android:fontFamily="serif"
        android:textColor="@android:color/white"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textStyle="normal|bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:background="@drawable/round_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="66dp"
        android:textAlignment="center"
        android:textStyle="normal|bold" />

    <TextView
        android:text="Sign Up Here"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:id="@+id/tvSignUp"
        android:textColor="@android:color/white"
        android:gravity="center_horizontal"
        android:textAlignment="center" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColorHint="@android:color/white"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_action_person"
                android:hint="@string/uName"
                android:textColor="@android:color/white"
                android:inputType="textPersonName"
                android:gravity="center_vertical|center_horizontal"
                android:textAlignment="center" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColorHint="@android:color/white"
            android:gravity="center_horizontal"
            android:layout_marginTop="64dp">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/ic_lock_idle_lock"
                android:hint="@string/pword"
                android:textColor="@android:color/white"
                android:inputType="textPassword"
                android:gravity="center_vertical|center_horizontal"
                android:textAlignment="center" />

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:id="@+id/imageView"
        android:elevation="50sp"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/btnLogin"
        android:layout_alignStart="@+id/btnLogin"
        android:layout_marginTop="13dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_plassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:hintTextAppearance="@style/Widget.Design.TextInputLayout"
        android:textColorHint="@android:color/white"
        android:gravity="center_horizontal"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    </android.support.design.widget.TextInputLayout>

</RelativeLayout>
